# OKRTracker_backend

./: .env.example  .gitignore  Dockerfile  manage.py  pyproject.toml  requirements.txt
argos_project/: asgi.py  urls.py  wsgi.py
argos_project/settings/: base.py  development.py  production.py
okr_app/: admin.py  apps.py  dashboard_views.py  export_views.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
okr_app/migrations/: 0001_initial.py  0002_initial.py  0003_add_key_activity_metric_notes.py
okr_app/templates/reports/: okr_report.html
trackr_project/: asgi.py  settings.py  wsgi.py
trackr_project/settings/: base.py  production.py
users_app/: admin.py  email_utils.py  models.py  permissions.py  serializers.py  urls.py  views.py
users_app/migrations/: 0001_initial.py  0002_add_key_activity_metric_notes.py
